# husky

./: CMakeLists.txt  package.xml
config/: husky.yaml  husky_control.yaml
launch/: controller.launch  display.launch  gazebo.launch  spawn.launch
meshes/: bl_ankle1.STL  bl_ankle2.STL  bl_femur.STL  bl_fibula.STL  bl_hip.STL  bl_tibia.STL  br_ankle.STL  br_ankle2.STL  br_femur.STL  br_fibula.STL  br_hip.STL  br_tibia.STL  fl_ankle1.STL  fl_ankle2.STL  fl_femur.STL  fl_fibula.STL  fl_hip.STL  fl_tibia.STL  fr_ankle2.STL  fr_femur.STL  fr_fibula.STL  fr_hip.STL  fr_tibia.STL
urdf/: husky.urdf  husky_reduced.csv  husky_reduced.urdf
